# survey_dd

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  docker-entrypoint.sh  main.py  package-lock.json  pyproject.toml  run_survey.sh
.omo/drafts/: survey-auto.md
.omo/plans/: add-surveymachine.md  bottleneck-analysis.md  ci-cd-infinite-loop.md  fix-ssl-wait.md  jenkins-automation.md  run-survey-script.md  self-improve-loop.md  survey-auto.md
.omo/run-continuation/: ses_07bf3703cffeMtxjS8AOlVQK1m.json  ses_07bf37948ffeKt7VSTTtIeqEpp.json  ses_07bf3af0dffe71ESBH97NGvCaQ.json  ses_07bf3edfbffePJ9Mkk8ml952jT.json  ses_07bf3f13bffewAf2w5LVQyQURH.json  ses_07bf3f758ffeKOPtL56awj1hqh.json  ses_07bf3fb05ffeMHBWGcS4gj5SfF.json  ses_07bf40007ffeKGaD1jkKHQNY1L.json  ses_07c2ef9c3ffeh25TTsZ1qd4Ble.json  ses_0a4962754ffeJJWt81fbA7V7ME.json
.omo/unknown_patterns/: page0_unknown_20260712_164318.html  page4_unknown_20260712_163810.html
.omo/work_orders/: wo_20260712_163811_090541.json  wo_20260712_163956_465394.json  wo_20260712_164009_936336.json  wo_20260712_164023_845091.json  wo_20260712_164037_172496.json  wo_20260712_164106_588026.json  wo_20260712_164120_561203.json  wo_20260712_164227_009808.json  wo_20260712_164239_633552.json  wo_20260712_164252_426078.json  wo_20260712_164305_320492.json  wo_20260712_164318_964298.json
strategies/: default.yaml
survey_auto/: browser.py  cli.py  executor.py  models.py  navigator.py  parser.py  strategies.py
survey_auto/self_improve/: __init__.py  checkpoint.py  deepseek_analyzer.py  detector.py  (+5 more)
