[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-auto"
version = "0.1.0"
description = "KiwiSurvey automation tool using Playwright Firefox"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.scripts]
survey-auto = "survey_auto.cli:cli"
